# resin-wifi-connect

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.template  Dockerfile.template.intel  Dockerfile.template.rpi  README.md  auth.json  brant.tgz  build.sh  buildall.sh  cfg.json  collectorsettings.xml  debugbuild.sh  etc_network_interfaces  package-files.sh  run.sh  ssh_setup  ssh_setup.sh  start
.circleci/: config.yml
config/: auth.json  cfg.intel  cfg.mac  cfg.rpi3  cfg.rpi3.no_resin  collectorsettings.xml  configure-networking.sh
data/: cfg.debug.json  cfg.json  collectorsettings.xml  resin-ethernet-01  resin-ethernet-02  resin-wifi-01
kcf_scripts/: configure_connection.sh  connection_exists.sh  defines  find_device.sh  get_dns.sh  get_gateway.sh  get_ip.sh  get_netmask.sh  networking-stub.sh  one_time_setup.sh  reboot.sh  udhcpd.conf  update-ip4-method.py
public/: config.hbs  config.html  index.html  status.hbs  wifisettings.hbs
public/js/: index.js
releases/: bundle-debug.tgz
scripts/: local-build.sh  start-rpi3-debug.sh  start.sh
src/: .kcf.rs.swp  config.rs  kcf.rs  linux.rs  macos.rs  main.rs  network.rs  server.rs  util.rs
ui/: config.hbs  status.hbs
ui/js/: index.js
ui/templates/: config.hbs  ethernet-dhcp-enable.hbs  ethernet-disable.hbs  ethernet-network-config.hbs  ethernet-nework-config.hbs  ethernet-setup-static.hbs  status.hbs  wifi-dhcp-config.hbs  wifi-setup.hbs
