[package]
name = "wifi-connect"
version = "3.0.4"
authors = ["Zahari Petkov <zahari@resin.io>", "Aaron Brodersen <aaron@resin.io>"]
description = "Easy WiFi setup for Linux devices from your mobile phone or laptop"

[dependencies]
network-manager = "0.8"
clap = "2.24"
iron = "0.5"
staticfile = "0.4"
mount = "0.3"
router = "0.5"
serde = "1.0.24"
serde_json = "1.0.8"
serde_derive = "1.0.24"
persistent = "0.3"
params = "0.6"
log = "0.3"
env_logger = "0.4"
hyper = "0.11"
handlebars-iron = "0.25.0"
handlebars = "0.29.1"
time = "0.1"
libc = "0.2.35"

[dependencies.clippy]
version = "*"
optional = true

[profile.release]
lto = true

[dependencies.cookie]
features = ["secure", "percent-encode"]

[features]
localbuild = []
watch = ["handlebars-iron/watch"]
