[package]
name = "wifi-connect"
version = "3.0.4"
authors = ["Zahari Petkov <zahari@resin.io>", "Aaron Brodersen <aaron@resin.io> Brant Rosenberger <brant@room3327.com>"]
description = "Easy WiFi setup for Linux devices from your mobile phone or laptop"

[dependencies]
network-manager = "0.8"
clap = "2.24"
iron = "0.5"
staticfile = "0.4"
mount = "0.3"
router = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
persistent = "0.3"
params = "0.6"
log = "0.3"
env_logger = "0.4"
hyper = "0.11"
handlebars-iron = "0.25"
handlebars = "0.29"
time = "0.1"
libc = "0.2"
rand = "0.4"
regex = "0.2"
lazy_static = "1.0.0"

[dependencies.clippy]
version = "*"
optional = true

[profile.release]
lto = true

[dependencies.cookie]
features = ["secure", "percent-encode"]

[features]
no_hotspot = []
watch = ["handlebars-iron/watch"]


